@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Removed unnecessary and redundant table prefix check later on in setup
 - Fixed css/js properties in TV tab to let RTEs auto-determine the height of their TD fields
 - Fixed missing permissions reference on resource controllers
 - Added OnHandleRequest to modManagerRequest::handleRequest
